# fox-kit

./: Cargo.toml  foxservices.cbopt.com.yaml
fox-k8s-crds/: Cargo.toml
fox-k8s-crds/src/: fox_service.rs  kubernetes_crd.rs  lib.rs
fox-operator/: Cargo.toml  build.rs  example.yaml  foxservices.cbopt.com.yaml
fox-operator/src/: finalizer.rs  fox_service.rs  main.rs
fox-operator/src/fox_service/: deployment.rs  service.rs
