[package]
name = "fox-k8s-crds"
version = "0.1.0"
authors = ["Chetan Bhasin <connect@chetanbhasin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "~0.56", default-features = true, features = ["derive"] }
kube-derive = "~0.56"
k8s-openapi = { version = "~0.11", default-features = false, features = ["v1_20"] }
serde = "~1.0"
serde_json = "~1.0"
schemars ={ version =  "~0.8", features = ["impl_json_schema"] }
